list_by_input file created

--- a/draw_teams.ipynb
+++ b/draw_teams.ipynb
@@ -2,32 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['GS', 'FB', 'BJK', 'TS']\n"
+      "FB GS BJK TS\n"
      ]
     }
    ],
    "source": [
     "list_teams = ['GS', 'FB', 'BJK', 'TS']\n",
-    "print(list_teams)"
+    "team_1 = list_teams.pop(random.randint(0,3)) #can assign with <list_teams.pop(random.randint(0, len(list_teams)-1))>\n",
+    "team_2 = list_teams.pop(random.randint(0,2))\n",
+    "team_3 = list_teams.pop(random.randint(0,1))\n",
+    "team_4 = list_teams[0]\n",
+    "print(team_1, team_2, team_3, team_4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in list_teams:\n",
-    "    #first_team = list_teams.pop(random.randint(0, len(list_teams)-i))\n",
-    "    print(i)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
